# UPPMControlApp

./: CMakeLists.txt  README.md  main.cpp
eth/: ethcore.cpp  ethcore.h  frame_defines.h  uppm.cpp  uppm.h  uppm_command_frame.h  uppm_fdk_frame.h  uppm_raw_comm_frame.h
gui/: controlgui.cpp  controlgui.h  ethgui.cpp  ethgui.h
qml/: ControlScreen.qml  EthSettings.qml  Main.qml
